Add responsiveness for mobile view

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         
         <section id="overview">
             <h2 id="subtitle-2" class="subtitle">Take a look</h2>
-            <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/ENODhDsEc2A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe id="video" src="https://www.youtube.com/embed/ENODhDsEc2A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <div class="keyboard-box">
                 <h3 class="keyboard-box__title">What’s in the box</h3>
                 <ul class="keyboard-box__list">
