Add nav bar for mobile view

--- a/index.html
+++ b/index.html
@@ -4,17 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <meta
-  http-equiv="Content-Security-Policy"
-  content="default-src 'self'; img-src https://*; child-src 'none';" /> -->
+    <script src="https://kit.fontawesome.com/2574fafacc.js" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="style.css">
     <title>Gamakay tk75</title>
 </head>
 <body>
     <header id="header">
+        <div id="nav-mobile" class="hidden">
+            <a id="nav-mob-features" class="nav-mobile-link" href="#features">Features</a>
+            <a id="nav-mob-overview" class="nav-mobile-link" href="#overview">Overview</a>
+        </div>
         <nav id="nav-bar">
+            <i id="nav-mobile-btn" class="fa-solid fa-bars" style="color: #ffffff;"></i>
             <a id="gamakay-link" href="https://gamakay.com/" target="_blank">Gamakay</a>
+            <div id="void-space"></div>
             <a class="nav-link" href="#features">Features</a>
             <a class="nav-link" href="#overview">Overview</a>
             <a class="nav-link nav-link-buy" href="#buy">Get One</a>
@@ -92,7 +96,7 @@
             </div>
         </section>
         <section id="buy" class="footer">
-            <button id="btn-buy" class="buyBtnAnimation">Buy</button>
+            <button id="btn-buy" href="https://gamakay.com/products/gamakay-tk75-75-gamakay-gateron-switch-triple-mode-rgb-mechanical-gaming-keyboard-with-pbt-cherry-profile-keycaps" class="buyBtnAnimation">Buy</button>
         </section>
         <section id="newsletter" class="footer">
             <h2 id="subtitle-3" class="subtitle">Want to know more?</h3>
@@ -103,5 +107,6 @@
             </form>
         </section>
     </main>
+    <script src="main.js" ></script>
 </body>
 </html>
